# dune-maxent

./: CMakeLists.txt  README  README.md  config.h.cmake  dune-maxent.pc.in  dune.module
.github/workflows/: debian-coverage.yml
.github/workflows/scripts/: release.py
cmake/modules/: CMakeLists.txt  DuneMaxentMacros.cmake
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/maxent/: CMakeLists.txt  maxent.hh
sandbox/src/: CMakeLists.txt  sandbox.cc
src/: CMakeLists.txt  dune-maxent.cc
